[tool.poetry]
name = "activejson"
version = "0.3.0"
description = "A convenient library to deal with large json data"
authors = ["Daniel Omar Vergara Pérez <daniel.omar.vergara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
