[tool.poetry]
name = "activejson"
version = "0.3.0"
description = "A convenient library to deal with large json data"
authors = ["Daniel Omar Vergara Pérez <daniel.omar.vergara@gmail.com>"]
license  = "MIT"
readme = "README.md"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
coverage = {extras = ["toml"], version = "^5.1"}
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
codecov = "^2.0.22"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["activejson"]

[tool.coverage.report]
show_missing = true
fail_under = 70
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
